# AI_chatbot_backend

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  security.py
app/: db.py  functions.py  models.py  schemas.py
bot/: chat_bot.py  prompts.py  test.ipynb  title_generator.py
